--- a/crud-application/crud-application/package.json
+++ b/crud-application/crud-application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-simple",
+  "name": "crud-application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,7 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "keywords": [],
-  "description": "тестровое задание "
+  }
 }
