--- a/crud-application/package.json
+++ b/crud-application/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "0.21.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.7",
+    "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
@@ -36,5 +41,8 @@
     ]
   },
   "keywords": [],
-  "description": "тестровое задание "
+  "description": "тестровое задание ",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
