--- a/crud-application/package.json
+++ b/crud-application/package.json
@@ -2,7 +2,6 @@
   "name": "test-simple",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wascoyur.github.io/employer-simpl/crud-application/build/",
   "dependencies": {
     "axios": "0.21.0",
     "body-parser": "^1.19.0",
@@ -15,6 +14,7 @@
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "request": "^2.88.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
