--- a/crud-application/package.json
+++ b/crud-application/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.8",
     "react": "^17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
@@ -12,6 +15,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "my-server": "node ./src/api/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
